JsonSerialiser: use reflection mode as code-generation does not work on newer java versions
Signed-off-by: Alexander Krimm <A.Krimm@gsi.de>